--- a/build.gradle
+++ b/build.gradle
@@ -24,14 +24,20 @@ ext {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-//    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-//    runtimeOnly 'com.mysql:mysql-connector-j'
+    runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
-    implementation 'org.springframework.kafka:spring-kafka:2.8.10'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    //유레카
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    //JPA
+//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    //카프카
+    implementation 'org.springframework.kafka:spring-kafka:2.8.10'
+
 }
 
 dependencyManagement {
