--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,5 @@
 server:
   port: 0
-
 spring:
   application:
     name: inspection-service
@@ -9,11 +8,12 @@ spring:
 #    port: 5672
 #    username: guest
 #    password: guest
-#  datasource:
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#    url:
-#    username:
-#    password:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    #    url: jdbc:mysql://192.168.0.189:33306/collecting?allowMultiQueries=true
+    url: jdbc:mysql://192.168.0.189:33306/inspection
+    username: scott
+    password: tiger
 
 eureka:
   instance:
@@ -34,4 +34,8 @@ management:
         include: refresh, health, beans, busrefresh
 #token:
 #  expireTime: 86400000
+mybatis:
+  configuration:
+    map-underscore-to-camel-case: true
+  mapper-locations: classpath:mapper/**/*.xml
 #  secret: user_token
