--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
-//    implementation 'org.springframework.kafka:spring-kafka:2.8.10'
+    implementation 'org.springframework.kafka:spring-kafka:2.8.10'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     //유레카
